<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>remove_customer</class>
 <widget class="QDialog" name="remove_customer">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>844</width>
    <height>440</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Remove Customer</string>
  </property>
  <widget class="QGroupBox" name="groupBox">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>0</y>
     <width>492</width>
     <height>303</height>
    </rect>
   </property>
   <property name="title">
    <string>Control</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="2" column="3">
     <widget class="QPushButton" name="view_customer">
      <property name="text">
       <string>View Customers</string>
      </property>
     </widget>
    </item>
    <item row="5" column="3">
     <widget class="QPushButton" name="Exit">
      <property name="text">
       <string>Exit</string>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Customer ID</string>
      </property>
     </widget>
    </item>
    <item row="5" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Last Name</string>
      </property>
     </widget>
    </item>
    <item row="0" column="0" colspan="6">
     <widget class="QTableView" name="cus_view"/>
    </item>
    <item row="4" column="1">
     <widget class="QLineEdit" name="customer_fn"/>
    </item>
    <item row="2" column="1">
     <widget class="QLineEdit" name="customerID"/>
    </item>
    <item row="5" column="1">
     <widget class="QLineEdit" name="customer_ln"/>
    </item>
    <item row="4" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>First Name</string>
      </property>
     </widget>
    </item>
    <item row="2" column="2">
     <widget class="QPushButton" name="rem_customer">
      <property name="text">
       <string>Remove Customer</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>Exit</sender>
   <signal>clicked()</signal>
   <receiver>remove_customer</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>681</x>
     <y>387</y>
    </hint>
    <hint type="destinationlabel">
     <x>399</x>
     <y>438</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
